--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "17.1.0",
     "@rollup/plugin-node-resolve": "11.2.0",
+    "@sveltejs/adapter-static": "^1.0.0-next.50",
     "autoprefixer": "10.2.5",
     "postcss": "^8.4.35",
     "rollup": "2.41.5",
@@ -30,6 +31,7 @@
     "@rollup/plugin-alias": "3.1.2",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
+    "qrcode.react": "^3.1.0",
     "sirv-cli": "1.0.11",
     "svelte-routing": "1.5.0",
     "tailwindcss": "^2.2.19"
