--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@rollup/plugin-alias": "3.1.2",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
+    "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
     "sirv-cli": "1.0.11",
     "svelte-routing": "1.5.0",
