--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "qrcode": "^1.5.3",
     "qrcode.react": "^3.1.0",
     "sirv-cli": "1.0.11",
+    "svelte-multiselect": "^10.3.0",
     "svelte-routing": "1.5.0",
+    "svelte-select": "^5.8.3",
     "tailwindcss": "^2.2.19"
   }
 }
