--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "17.1.0",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "11.2.0",
+    "@rollup/plugin-replace": "^5.0.5",
     "@sveltejs/adapter-static": "^1.0.0-next.50",
     "autoprefixer": "10.2.5",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.35",
     "rollup": "2.41.5",
     "rollup-plugin-livereload": "2.0.0",
