--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notus-svelte",
   "version": "1.1.0",
   "homepage": "https://demos.creative-tim.com/notus-svelte/",
-  "description": "Notus Svelte - A free Tailwind CSS and Svelte UI Kit and Admin by Creative Tim.",
+  "description": "TAACS",
   "repository": "https://github.com/creativetimofficial/notus-svelte",
   "license": "MIT",
   "scripts": {
